# MinisSkills

./: README.md
alibabacloud-bailian-rag-knowledgebase/: SKILL.md
alibabacloud-bailian-rag-knowledgebase/scripts/: check_env.py  multi_retrieve.py  quick_retrieve.py  retrieve.py  upload_file.py
autoglm-install/: SKILL.md
autoglm-install/references/: README.md
autoglm-install/scripts/: install.sh
boss-hub/: SKILL.md  pyproject.toml
boss-hub/boss_cli/: auth.py
codex-image/: SKILL.md
codex-image/scripts/: codex_image.py  get_auth.py
haozhu-sms/: SKILL.md  USAGE.md
haozhu-sms/references/: api_docs.md
haozhu-sms/scripts/: check_sms.py  get_phone_only.py  release_phone.py  sms_client.py
hyperframes/: SKILL.md
hyperframes-cli/: SKILL.md
maimai-hub/: SKILL.md
qbt-hub/: SKILL.md
qbt-hub/scripts/: qbt.py
shortcut-share-file/: SKILL.md
shortcut-share-file/references/: 帮助文档.md
skill-creator/: SKILL.md
tg-hub/: SKILL.md
tg-hub/scripts/: config.py
ttyd-web-terminal/: SKILL.md
ttyd-web-terminal/scripts/: deploy.sh  start  status  stop
twitter-downloader/: SKILL.md
twitter-downloader/scripts/: twitter_downloader.sh
web-search/: SKILL.md
web-search/evals/: evals.json
web-search/scripts/: browser_search.py
webshell-converse/: SKILL.md
webshell-converse/scripts/: web-ssh.py
