[project]
name = "boss-hub"
version = "0.1.0"
description = "BOSS 直聘 CLI — 搜索职位、推荐、投递、打招呼"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "qrcode>=7.0",
]

[project.scripts]
boss = "boss_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boss_cli"]
